# hse-advanced-python

./: .gitignore  README.md  visualize_ast.py
examples/: fib_memo.py  fib_naive.py
hw01/: README.md  __init__.py  main.py  requirements.txt  setup.cfg  setup.py  visualize.py  visualize_ast.py
hw01/examples/: fib_memo.py
hw01/scripts/: setup.py
hw01/src/: __init__.py
hw01/src/beautiful_ast/: ast_visualizer.py
hw02/: Dockerfile  README.md  latex.py  main.py  requirements.txt  utils.py
hw02/artifacts/: advanced.tex  ast.tex  medium-conda-repo-link.txt  pypi-repo-link.txt  table.tex
hw02/defaults/: blocks.py  commands.py  text.py
hw03/: hash_collision.py  matrix.py  mixins_matrix.py  operators.py
hw03/artifacts/medium/: matrix&.txt  matrix*.txt  matrix+.txt  matrix-.txt  matrix<<.txt  matrix>>.txt  matrix@.txt  matrix^.txt  matrix|.txt
hw04/: easy.py  medium.py
hw04/artifacts/: easy.txt  medium.txt  medium_compare.txt
hw5/src/: easy.py
