[metadata]
name = beautiful_ast
version = 0.0.1
author = Gleb Marin
author_email = glebmar2001@gmail.com
description = Beautiful AST generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Glebanister/hse-advanced-python/tree/hw-01-beatiful-ast/hw01
project_urls =
    Bug Tracker = https://github.com/Glebanister/hse-advanced-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src